<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Brainmher</string>

    // Titles
    <string name="add_carer">Registrar Cuidador</string>
    <string name="lbl_welcome">Bienvenido</string>
    <string name="lbl_my_profile">MI PERFIL</string>
    <string name="list_patient">Lista de pacientes</string>
    <string name="add_patient">Agregar Paciente</string>
    <string name="execise_name">Nombre del ejercicio</string>
    <string name="medicine_notification">Notificación Medicamento</string>
    <string name="title_activity_games">Juegos</string>
    <string name="reset_password">Restaurar contraseña</string>

    // Placeholders, Labels
    <string name="email">Correo electrónico</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="profession">Profesión</string>
    <string name="city">Ciudad</string>
    <string name="telephone">Teléfono</string>
    <string name="date_of_birth">Fecha de nacimiento</string>
    <string name="gender">Género</string>
    <string name="residence_country">País de residencia</string>
    <string name="documet_number">Número de documento</string>
    <string name="surnames">Apellido</string>
    <string name="names">Nombre</string>
    <string name="full_name">Nombre Completo</string>
    <string name="date_diagnostic">Fecha de diagnóstico</string>
    <string name="diagnostic">Diagnóstico</string>
    <string name="number">Número</string>
    <string name="hour_format">Hora de inicio: hh:mm</string>
    <string name="every">Cada:</string>

    <string name="lbl_write_question">Escribe una pregunta que corresponda con la imagen.</string>
    <string name="lbl_answer">Escriba una opción de respuesta.</string>
    <string name="lbl_select_correct_answer">Selecciona la respuesta correcta.</string>
    <string name="lbl_finished">Finalizado:</string>
    <string name="lbl_statement">Estado:</string>
    <string name="lbl_best_score">Mejor puntuación:</string>
    <string name="lbl_level">Nivel:</string>
    <string name="lbl_description">Descripción:</string>
    <string name="lbl_instructions">Instrucciones:</string>
    <string name="lbl_description_family">Actividades para conservar recuerdos de tus seres queridos.</string>
    <string name="lbl_description_home">Actividades para conservar recuerdos de tu hogar.</string>
    <string name="lbl_description_places">Actividades para conservar recuerdos de los lugares que frecuentas.</string>
    <string name="lbl_description_pets">Actividades para conservar los recuerdos de tus mascotas.</string>
    <string name="lbl_instructions_questions">Cuando tu cuidador habilite las actividades, podrás visualizarlas en este apartado.</string>

    <string name="description">Descripción</string>

    // Buttons, Links, Tabs
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="register">Registrar</string>
    <string name="save">Guardar</string>
    <string name="update">Actualizar</string>
    <string name="home">Inicio</string>
    <string name="test">Test</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="start">Empieza</string>
    <string name="close">Cerrar</string>
    <string name="alarm_on">Encendida</string>
    <string name="alarm_off">Apagada</string>
    <string name="general_information">Info. General</string>
    <string name="phases_ea">Fases E.A.</string>
    <string name="practice">Practicar</string>
    <string name="cancel">Cancelar</string>
    <string name="send">Enviar</string>
    <string name="back_to_login">Volver al Login</string>

    <string name="info">Información</string>
    <string name="emergency">Emergencias</string>
    <string name="my_care">Mi cuidado</string>
    <string name="manage">Gestionar</string>
    <string name="diary">Agenda</string>
    <string name="exercises">Ejercicios</string>
    <string name="support">Apoyo</string>

    <string name="menu_profile">Perfil</string>

    <string name="cognitive">Cognitiva</string>
    <string name="motor">Motriz</string>
    <string name="memorizame">Memorizame</string>
    <string name="notifications">Notificaciones</string>
    <string name="add_event_carer">Agregar evento</string>
    <string name="view_event_carer">Ver eventos</string>
    <string name="cancel_event_carer">Cancelar evento</string>
    <string name="exit">Salir</string>
    <string name="select_option">Seleccione una opción</string>
    <string name="events_for_date">Eventos del día:</string>
    <string name="no_events_for_date">No hay eventos</string>

    <string name="tab_family">Familia</string>
    <string name="tab_home">Hogar</string>
    <string name="tab_places">Lugares</string>
    <string name="tab_pets">Mascotas</string>
    <string name="tab_cognitive_exercises">Ejercicios Cognitivos</string>
    <string name="tab_motor_exercises">Ejercicios Motrices</string>
    <string name="tab_medicaments">Medicamentos</string>
    <string name="tab_therapies">Terapias</string>

    // Alers, messages
    <string name="val_min_password">Debe contener almenos 7 caracteres</string>
    <string name="select_photo">Seleccione la Imagen</string>
    <string name="was_saved_succesfully">Se guardó exitosamente</string>
    <string name="auth_fail">Error en la autenticación</string>
    <string name="email_required">Correo electrónico obligatorio</string>
    <string name="password_required">Contraseña obligatoria</string>
    <string name="complete_field">Complete todos los campos</string>
    <string name="entering">Ingresando, por favor espere...</string>
    <string name="updating">Actualizando...</string>
    <string name="registering">Realizando registro...</string>
    <string name="deleting">Eliminando registro...</string>
    <string name="registration_failed">Registro falló</string>
    <string name="no_records">No hay registros</string>
    <string name="message_delete">¿Estas seguro que quieres eliminar a %1$s ?</string>
    <string name="elimination_question">¿Estas seguro de eliminar el registro?</string>
    <string name="alert">Alert</string>
    <string name="delete">Eliminar</string>
    <string name="redirecting">Redirigiendo...</string>
    <string name="record_deleted">Registro eliminado</string>
    <string name="elimination_failed">Error al eliminar registro</string>
    <string name="saving_error">Error al guardar registro</string>
    <string name="image_elimination_failed">Error al eliminar imágen</string>
    <string name="no_cognitive_excercises">No hay ejercicios cognitivos</string>
    <string name="error_loading_data">Error al obtener datos</string>
    <string name="exercise_assignment">Ejercicio asignado.</string>
    <string name="failed_exercise_assignment">Asignacion fallida.</string>
    <string name="failed_management">Gestión fallida</string>
    <string name="unassigned_exercise">Ejercicio desasignado.</string>
    <string name="error_to_deallocate">Error al desasignar.</string>
    <string name="no_notifications">No hay notificaciones</string>

    <string name="add_family_question">Agregar Pregunta de Familia</string>
    <string name="add_home_question">Agregar Pregunta de Hogar</string>
    <string name="add_places_question">Agregar Pregunta de Lugar</string>
    <string name="add_pets_question">Agregar Pregunta de Mascota</string>

    <string name="add_medicine">Agregar medicamento</string>
    <string name="update_medicine">Actualizar medicamento</string>

    <string name="rate_saved">Calificación guardada.</string>
    <string name="rate_no_saved">Error al calificar.</string>

    <string name="select_answer">Selecciona una respuesta.</string>
    <string name="msg_memorizame_success">¡Muy bien, lo lograste! ¿Te gustaría intentarlo otra vez?</string>
    <string name="msg_memorizame_failed">No pasa nada, vamos a intentarlo de nuevo. ¿Te animas?</string>

    <string name="win_messege">!Felicitaciones, así se hace!.</string>
    <string name="win_cont_messege">¿Quieres volver a intentarlo?</string>
    <string name="reload">Recargar</string>
    <string name="volver_juego">Volver al menu</string>

    <string name="medicine_reminder">Recuerda que debes tomar o aplicar el medicamento.</string>
    <string name="lbl_frequency">Tomar cada:</string>
    <string name="lbl_hours">Hora de inicio:</string>
    <string name="lbl_start_date">Fecha de inicio:</string>
    <string name="lbl_end_date">Fecha de finalización:</string>
    <string name="lbl_recibe_date">Fecha de receta:</string>
    <string name="lbl_dose">Dosis:</string>
    <string name="btn_show_info">Mostrar</string>
    <string name="btn_hide_info">Ocultar</string>
    <string name="lbl_date_of_assignment">Fecha de asignación:</string>
    <string name="lbl_medicament_reminder">Recordatorio de Medicación</string>

    // Options
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string-array name="residence_countries">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>República Dominicana</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>España</item>
        <item>Guatemala</item>
        <item>Honduras</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Puerto Rico</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>

    <string name="exersice_description">Además de proporcionar beneficios al estado físico en general, los ejercicios con cuerda tienen efectos particularmente interesantes para determinadas personas y prácticas deportivas.
        Los músculos de los brazos y de las piernas (pantorrillas, muslos y glúteos) se desarrollan y fortalecen, perdiendo su flacidez y mejorando su forma, mientras el cuello, los hombros y el pecho se ensanchan y se vuelven firmes.</string>
</resources>