<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/ps_tabs_therapy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            style="@style/StyleTabLayoutWhite">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ps_tab_therapy_cognitive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cognitive"
                android:layout_alignParentStart="true"
                />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ps_tab_therapy_motor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motor" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/ps_tab_therapy_memorizame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memorizame" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/containerPageTherapyPS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:layout_below="@id/ps_tabs_therapy"
            />

    </RelativeLayout>

</FrameLayout>