<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient_background"
    android:focusableInTouchMode="true"
    tools:context="com.uan.brainmher.application.ui.activities.general.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/fifty"
            android:src="@drawable/ic_imagotipo_white" />

        <!-- Username text box -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            style="@style/StyleTextInputLayotTextBoxLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyleTextInputEditTextLoginEmail"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Text box for user password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            style="@style/StyleTextInputLayotTextBoxLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/StyleTextInputEditTextLogin"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/ten"
            android:text="@string/login"
            style="@style/StyleLoginButtons"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/twenty"
            android:layout_marginVertical="@dimen/five"
            android:paddingVertical="@dimen/ten"
            android:text="@string/label_register_account"
            style="@style/StyleTextLabel"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/link_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/five"
            android:paddingVertical="@dimen/ten"
            android:text="@string/register"
            style="@style/StyleTextButton"/>

    </LinearLayout>

</RelativeLayout>